cyber-pi-intel/deployment/k8s/kafka/kafka-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ingress
  namespace: tqakb-v4
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "TCP"
    nginx.ingress.kubernetes.io/tcp-services-configmap: "ingress/tcp-services"
spec:
  ingressClassName: nginx
  rules:
  - host: kafka.tqakb-v4.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafka-headless
            port:
              number: 9092
